<resources>
    <string name="app_name">My Application</string>
    <string name="page1">page1</string>
    <string name="page2">page2</string>
    <string name="page3">page3</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="volodya">Volodya</string>
    <string name="v_lisovskiy_ideas_wordls_com">v.lisovskiy@ideas-wordls.com</string>
    <string name="dagger">Dagger</string>
    <string name="retrofit">Retrofit</string>
    <string name="room">ROOM</string>
</resources>